fix for jdk8, because List::of is jdk9